src/parser.output
Terminals unused in grammar

   Operator
   Operator_ref
   Operator_deref
   Keyword
   Punctuator


State 303 conflicts: 1 shift/reduce


Grammar

    0 $accept: ROOT $end

    1 primary_EXPR: Ident
    2             | Constant
    3             | String
    4             | Punctuator_par_open EXPR Punctuator_par_close

    5 Ident: Identifier

    6 Constant: Constant_int
    7         | Constant_char
    8         | Constant_double
    9         | Constant_float
   10         | Constant_long_double

   11 postfix_EXPR: primary_EXPR
   12             | postfix_EXPR Punctuator_squ_open EXPR Punctuator_squ_close
   13             | postfix_EXPR Punctuator_par_open Punctuator_par_close
   14             | postfix_EXPR Punctuator_par_open argument_EXPR_list Punctuator_par_close
   15             | postfix_EXPR Operator_access Ident
   16             | postfix_EXPR Operator_deref_access Ident
   17             | postfix_EXPR Operator_addadd
   18             | postfix_EXPR Operator_subsub

   19 argument_EXPR_list: assignment_EXPR
   20                   | argument_EXPR_list Operator_comma assignment_EXPR

   21 unary_EXPR: postfix_EXPR
   22           | Operator_addadd unary_EXPR
   23           | Operator_subsub unary_EXPR
   24           | unary_operator cast_EXPR
   25           | Operator_sizeof unary_EXPR
   26           | Operator_sizeof Punctuator_par_open type_name Punctuator_par_close

   27 unary_operator: Operator_bit_and
   28               | Operator_mul
   29               | Operator_add
   30               | Operator_sub
   31               | Operator_bit_not
   32               | Operator_not

   33 cast_EXPR: unary_EXPR
   34          | Punctuator_par_open type_name Punctuator_par_close cast_EXPR

   35 multiplicative_EXPR: cast_EXPR
   36                    | multiplicative_EXPR Operator_mul cast_EXPR
   37                    | multiplicative_EXPR Operator_div cast_EXPR
   38                    | multiplicative_EXPR Operator_mod cast_EXPR

   39 additive_EXPR: multiplicative_EXPR
   40              | additive_EXPR Operator_add multiplicative_EXPR
   41              | additive_EXPR Operator_sub multiplicative_EXPR

   42 shift_EXPR: additive_EXPR
   43           | shift_EXPR Operator_sl additive_EXPR
   44           | shift_EXPR Operator_sr additive_EXPR

   45 relational_EXPR: shift_EXPR
   46                | relational_EXPR Operator_less shift_EXPR
   47                | relational_EXPR Operator_greater shift_EXPR
   48                | relational_EXPR Operator_less_equal shift_EXPR
   49                | relational_EXPR Operator_greater_equal shift_EXPR

   50 equality_EXPR: relational_EXPR
   51              | equality_EXPR Operator_equal relational_EXPR
   52              | equality_EXPR Operator_not_equal relational_EXPR

   53 BIT_AND_EXPR: equality_EXPR
   54             | BIT_AND_EXPR Operator_bit_and equality_EXPR

   55 BIT_XBIT_OR_EXPR: BIT_AND_EXPR
   56                 | BIT_XBIT_OR_EXPR Operator_bit_xor BIT_AND_EXPR

   57 BIT_OR_EXPR: BIT_XBIT_OR_EXPR
   58            | BIT_OR_EXPR Operator_bit_or BIT_XBIT_OR_EXPR

   59 LOGIC_AND_EXPR: BIT_OR_EXPR
   60               | LOGIC_AND_EXPR Operator_and BIT_OR_EXPR

   61 LOGIC_OR_EXPR: LOGIC_AND_EXPR
   62              | LOGIC_OR_EXPR Operator_or LOGIC_AND_EXPR

   63 conditional_EXPR: LOGIC_OR_EXPR
   64                 | LOGIC_OR_EXPR Operator_trinary_question EXPR Operator_trinary_choice conditional_EXPR

   65 assignment_EXPR: conditional_EXPR
   66                | unary_EXPR assignment assignment_EXPR

   67 assignment: Operator_assign
   68           | Operator_mul_assign
   69           | Operator_div_assign
   70           | Operator_mod_assign
   71           | Operator_add_assign
   72           | Operator_sub_assign
   73           | Operator_sl_assign
   74           | Operator_sr_assign
   75           | Operator_and_assign
   76           | Operator_xor_assign
   77           | Operator_or_assign

   78 EXPR: assignment_EXPR
   79     | EXPR Operator_comma assignment_EXPR

   80 constant_EXPR: conditional_EXPR

   81 declaration: declaration_specifiers init_declarator_list Punctuator_eol
   82            | declaration_specifiers Punctuator_eol

   83 declaration_specifiers: storage_class_specifier
   84                       | storage_class_specifier declaration_specifiers
   85                       | type_specifier
   86                       | type_specifier declaration_specifiers

   87 storage_class_specifier: Keyword_typedef

   88 init_declarator_list: init_declarator
   89                     | init_declarator_list Operator_comma init_declarator

   90 init_declarator: declarator
   91                | declarator Operator_assign initializer

   92 type_specifier: Keyword_void
   93               | Keyword_char
   94               | Keyword_short
   95               | Keyword_int
   96               | Keyword_long
   97               | Keyword_float
   98               | Keyword_double
   99               | Keyword_signed
  100               | Keyword_unsigned
  101               | enum_specifier
  102               | struct_specifier

  103 struct_specifier: Keyword_struct Ident Punctuator_cur_open struct_declaration_list Punctuator_cur_close
  104                 | Keyword_struct Punctuator_cur_open struct_declaration_list Punctuator_cur_close
  105                 | Keyword_struct Ident

  106 struct_declaration_list: struct_declaration
  107                        | struct_declaration_list struct_declaration

  108 struct_declaration: specifier_list struct_declarator_list Punctuator_eol

  109 specifier_list: type_specifier
  110               | type_specifier specifier_list

  111 struct_declarator_list: declarator
  112                       | struct_declarator_list Operator_comma declarator

  113 enum_specifier: Keyword_enum Ident
  114               | Keyword_enum Ident Punctuator_cur_open enum_list Punctuator_cur_close
  115               | Keyword_enum Punctuator_cur_open enum_list Punctuator_cur_close

  116 enum_list: enumerator
  117          | enum_list Operator_comma enumerator

  118 enumerator: ENUM_CONST
  119           | ENUM_CONST Operator_assign constant_EXPR

  120 ENUM_CONST: Ident

  121 declarator: direct_declarator
  122           | pointer direct_declarator

  123 direct_declarator: Ident
  124                  | Punctuator_par_open declarator Punctuator_par_close
  125                  | direct_declarator Punctuator_squ_open Punctuator_squ_close
  126                  | direct_declarator Punctuator_squ_open constant_EXPR Punctuator_squ_close
  127                  | direct_declarator Punctuator_par_open parameter_type_list Punctuator_par_close
  128                  | direct_declarator Punctuator_par_open Punctuator_par_close

  129 pointer: Operator_mul
  130        | Operator_mul pointer

  131 parameter_type_list: parameter_list

  132 parameter_list: parameter_declaration
  133               | parameter_list Operator_comma parameter_declaration

  134 parameter_declaration: declaration_specifiers declarator
  135                      | declaration_specifiers
  136                      | declaration_specifiers abstract_declarator

  137 type_name: specifier_list
  138          | specifier_list abstract_declarator

  139 abstract_declarator: pointer
  140                    | pointer direct_abstract_declarator
  141                    | direct_abstract_declarator

  142 direct_abstract_declarator: Punctuator_par_open abstract_declarator Punctuator_par_close
  143                           | direct_abstract_declarator Punctuator_squ_open constant_EXPR Punctuator_squ_close
  144                           | Punctuator_squ_open constant_EXPR Punctuator_squ_close
  145                           | direct_abstract_declarator Punctuator_squ_open Punctuator_squ_close
  146                           | Punctuator_squ_open Punctuator_squ_close
  147                           | direct_abstract_declarator Punctuator_par_open parameter_type_list Punctuator_par_close
  148                           | Punctuator_par_open parameter_type_list Punctuator_par_close
  149                           | direct_abstract_declarator Punctuator_par_open Punctuator_par_close
  150                           | Punctuator_par_open Punctuator_par_close

  151 initializer: assignment_EXPR
  152            | Punctuator_cur_open initializer_list Punctuator_cur_close
  153            | Punctuator_cur_open initializer_list Operator_comma Punctuator_cur_close

  154 initializer_list: initializer
  155                 | initializer_list Operator_comma initializer

  156 statement: selection_statement
  157          | labeled_statement
  158          | compound_statement
  159          | EXPR_statement
  160          | iteration_statement
  161          | jump_statement

  162 labeled_statement: Keyword_case constant_EXPR Operator_trinary_choice statement
  163                  | Keyword_default Operator_trinary_choice statement

  164 compound_statement: Punctuator_cur_open declaration_list statement_list Punctuator_cur_close
  165                   | Punctuator_cur_open declaration_list Punctuator_cur_close
  166                   | Punctuator_cur_open statement_list Punctuator_cur_close
  167                   | Punctuator_cur_open Punctuator_cur_close

  168 declaration_list: declaration
  169                 | declaration_list declaration

  170 statement_list: statement
  171               | statement_list statement

  172 EXPR_statement: EXPR Punctuator_eol
  173               | Punctuator_eol

  174 selection_statement: Keyword_if Punctuator_par_open EXPR Punctuator_par_close statement Keyword_else statement
  175                    | Keyword_if Punctuator_par_open EXPR Punctuator_par_close statement
  176                    | Keyword_switch Punctuator_par_open EXPR Punctuator_par_close statement

  177 iteration_statement: Keyword_while Punctuator_par_open EXPR Punctuator_par_close statement
  178                    | Keyword_do statement Keyword_while Punctuator_par_open EXPR Punctuator_par_close Punctuator_eol
  179                    | Keyword_for Punctuator_par_open EXPR_statement EXPR_statement EXPR Punctuator_par_close statement
  180                    | Keyword_for Punctuator_par_open EXPR_statement EXPR_statement Punctuator_par_close statement

  181 jump_statement: Keyword_continue Punctuator_eol
  182               | Keyword_break Punctuator_eol
  183               | Keyword_return Punctuator_eol
  184               | Keyword_return EXPR Punctuator_eol

  185 translation_unit: external_declaration
  186                 | translation_unit external_declaration

  187 external_declaration: function_definition
  188                     | declaration

  189 function_definition: declarator compound_statement
  190                    | declaration_specifiers declarator compound_statement

  191 ROOT: translation_unit


Terminals, with rules where they appear

$end (0) 0
error (256)
Constant_int (258) 6
Constant_char (259) 7
Constant_double (260) 8
Constant_float (261) 9
Constant_long_double (262) 10
String (263) 3
Identifier (264) 5
Operator (265)
Operator_add (266) 29 40
Operator_sub (267) 30 41
Operator_addadd (268) 17 22
Operator_subsub (269) 18 23
Operator_mul (270) 28 36 129 130
Operator_div (271) 37
Operator_mod (272) 38
Operator_and (273) 60
Operator_or (274) 62
Operator_not (275) 32
Operator_assign (276) 67 91 119
Operator_equal (277) 51
Operator_not_equal (278) 52
Operator_greater (279) 47
Operator_less (280) 46
Operator_greater_equal (281) 49
Operator_less_equal (282) 48
Operator_bit_and (283) 27 54
Operator_bit_or (284) 58
Operator_bit_not (285) 31
Operator_bit_xor (286) 56
Operator_sl (287) 43
Operator_sr (288) 44
Operator_add_assign (289) 71
Operator_sub_assign (290) 72
Operator_mul_assign (291) 68
Operator_div_assign (292) 69
Operator_mod_assign (293) 70
Operator_and_assign (294) 75
Operator_or_assign (295) 77
Operator_xor_assign (296) 76
Operator_sr_assign (297) 74
Operator_sl_assign (298) 73
Operator_ref (299)
Operator_deref (300)
Operator_access (301) 15
Operator_deref_access (302) 16
Operator_sizeof (303) 25 26
Operator_trinary_question (304) 64
Operator_trinary_choice (305) 64 162 163
Operator_comma (306) 20 79 89 112 117 133 153 155
Keyword (307)
Keyword_void (308) 92
Keyword_char (309) 93
Keyword_short (310) 94
Keyword_int (311) 95
Keyword_long (312) 96
Keyword_float (313) 97
Keyword_double (314) 98
Keyword_signed (315) 99
Keyword_unsigned (316) 100
Keyword_case (317) 162
Keyword_default (318) 163
Keyword_if (319) 174 175
Keyword_else (320) 174
Keyword_switch (321) 176
Keyword_while (322) 177 178
Keyword_do (323) 178
Keyword_for (324) 179 180
Keyword_continue (325) 181
Keyword_break (326) 182
Keyword_return (327) 183 184
Keyword_enum (328) 113 114 115
Keyword_struct (329) 103 104 105
Keyword_typedef (330) 87
Punctuator (331)
Punctuator_eol (332) 81 82 108 172 173 178 181 182 183 184
Punctuator_par_open (333) 4 13 14 26 34 124 127 128 142 147 148 149
    150 174 175 176 177 178 179 180
Punctuator_par_close (334) 4 13 14 26 34 124 127 128 142 147 148 149
    150 174 175 176 177 178 179 180
Punctuator_squ_open (335) 12 125 126 143 144 145 146
Punctuator_squ_close (336) 12 125 126 143 144 145 146
Punctuator_cur_open (337) 103 104 114 115 152 153 164 165 166 167
Punctuator_cur_close (338) 103 104 114 115 152 153 164 165 166 167


Nonterminals, with rules where they appear

$accept (84)
    on left: 0
primary_EXPR (85)
    on left: 1 2 3 4, on right: 11
Ident (86)
    on left: 5, on right: 1 15 16 103 105 113 114 120 123
Constant (87)
    on left: 6 7 8 9 10, on right: 2
postfix_EXPR (88)
    on left: 11 12 13 14 15 16 17 18, on right: 12 13 14 15 16 17 18
    21
argument_EXPR_list (89)
    on left: 19 20, on right: 14 20
unary_EXPR (90)
    on left: 21 22 23 24 25 26, on right: 22 23 25 33 66
unary_operator (91)
    on left: 27 28 29 30 31 32, on right: 24
cast_EXPR (92)
    on left: 33 34, on right: 24 34 35 36 37 38
multiplicative_EXPR (93)
    on left: 35 36 37 38, on right: 36 37 38 39 40 41
additive_EXPR (94)
    on left: 39 40 41, on right: 40 41 42 43 44
shift_EXPR (95)
    on left: 42 43 44, on right: 43 44 45 46 47 48 49
relational_EXPR (96)
    on left: 45 46 47 48 49, on right: 46 47 48 49 50 51 52
equality_EXPR (97)
    on left: 50 51 52, on right: 51 52 53 54
BIT_AND_EXPR (98)
    on left: 53 54, on right: 54 55 56
BIT_XBIT_OR_EXPR (99)
    on left: 55 56, on right: 56 57 58
BIT_OR_EXPR (100)
    on left: 57 58, on right: 58 59 60
LOGIC_AND_EXPR (101)
    on left: 59 60, on right: 60 61 62
LOGIC_OR_EXPR (102)
    on left: 61 62, on right: 62 63 64
conditional_EXPR (103)
    on left: 63 64, on right: 64 65 80
assignment_EXPR (104)
    on left: 65 66, on right: 19 20 66 78 79 151
assignment (105)
    on left: 67 68 69 70 71 72 73 74 75 76 77, on right: 66
EXPR (106)
    on left: 78 79, on right: 4 12 64 79 172 174 175 176 177 178 179
    184
constant_EXPR (107)
    on left: 80, on right: 119 126 143 144 162
declaration (108)
    on left: 81 82, on right: 168 169 188
declaration_specifiers (109)
    on left: 83 84 85 86, on right: 81 82 84 86 134 135 136 190
storage_class_specifier (110)
    on left: 87, on right: 83 84
init_declarator_list (111)
    on left: 88 89, on right: 81 89
init_declarator (112)
    on left: 90 91, on right: 88 89
type_specifier (113)
    on left: 92 93 94 95 96 97 98 99 100 101 102, on right: 85 86 109
    110
struct_specifier (114)
    on left: 103 104 105, on right: 102
struct_declaration_list (115)
    on left: 106 107, on right: 103 104 107
struct_declaration (116)
    on left: 108, on right: 106 107
specifier_list (117)
    on left: 109 110, on right: 108 110 137 138
struct_declarator_list (118)
    on left: 111 112, on right: 108 112
enum_specifier (119)
    on left: 113 114 115, on right: 101
enum_list (120)
    on left: 116 117, on right: 114 115 117
enumerator (121)
    on left: 118 119, on right: 116 117
ENUM_CONST (122)
    on left: 120, on right: 118 119
declarator (123)
    on left: 121 122, on right: 90 91 111 112 124 134 189 190
direct_declarator (124)
    on left: 123 124 125 126 127 128, on right: 121 122 125 126 127
    128
pointer (125)
    on left: 129 130, on right: 122 130 139 140
parameter_type_list (126)
    on left: 131, on right: 127 147 148
parameter_list (127)
    on left: 132 133, on right: 131 133
parameter_declaration (128)
    on left: 134 135 136, on right: 132 133
type_name (129)
    on left: 137 138, on right: 26 34
abstract_declarator (130)
    on left: 139 140 141, on right: 136 138 142
direct_abstract_declarator (131)
    on left: 142 143 144 145 146 147 148 149 150, on right: 140 141
    143 145 147 149
initializer (132)
    on left: 151 152 153, on right: 91 154 155
initializer_list (133)
    on left: 154 155, on right: 152 153 155
statement (134)
    on left: 156 157 158 159 160 161, on right: 162 163 170 171 174
    175 176 177 178 179 180
labeled_statement (135)
    on left: 162 163, on right: 157
compound_statement (136)
    on left: 164 165 166 167, on right: 158 189 190
declaration_list (137)
    on left: 168 169, on right: 164 165 169
statement_list (138)
    on left: 170 171, on right: 164 166 171
EXPR_statement (139)
    on left: 172 173, on right: 159 179 180
selection_statement (140)
    on left: 174 175 176, on right: 156
iteration_statement (141)
    on left: 177 178 179 180, on right: 160
jump_statement (142)
    on left: 181 182 183 184, on right: 161
translation_unit (143)
    on left: 185 186, on right: 186 191
external_declaration (144)
    on left: 187 188, on right: 185 186
function_definition (145)
    on left: 189 190, on right: 187
ROOT (146)
    on left: 191, on right: 0


State 0

    0 $accept: . ROOT $end

    Identifier           shift, and go to state 1
    Operator_mul         shift, and go to state 2
    Keyword_void         shift, and go to state 3
    Keyword_char         shift, and go to state 4
    Keyword_short        shift, and go to state 5
    Keyword_int          shift, and go to state 6
    Keyword_long         shift, and go to state 7
    Keyword_float        shift, and go to state 8
    Keyword_double       shift, and go to state 9
    Keyword_signed       shift, and go to state 10
    Keyword_unsigned     shift, and go to state 11
    Keyword_enum         shift, and go to state 12
    Keyword_struct       shift, and go to state 13
    Keyword_typedef      shift, and go to state 14
    Punctuator_par_open  shift, and go to state 15

    Ident                    go to state 16
    declaration              go to state 17
    declaration_specifiers   go to state 18
    storage_class_specifier  go to state 19
    type_specifier           go to state 20
    struct_specifier         go to state 21
    enum_specifier           go to state 22
    declarator               go to state 23
    direct_declarator        go to state 24
    pointer                  go to state 25
    translation_unit         go to state 26
    external_declaration     go to state 27
    function_definition      go to state 28
    ROOT                     go to state 29


State 1

    5 Ident: Identifier .

    $default  reduce using rule 5 (Ident)


State 2

  129 pointer: Operator_mul .
  130        | Operator_mul . pointer

    Operator_mul  shift, and go to state 2

    $default  reduce using rule 129 (pointer)

    pointer  go to state 30


State 3

   92 type_specifier: Keyword_void .

    $default  reduce using rule 92 (type_specifier)


State 4

   93 type_specifier: Keyword_char .

    $default  reduce using rule 93 (type_specifier)


State 5

   94 type_specifier: Keyword_short .

    $default  reduce using rule 94 (type_specifier)


State 6

   95 type_specifier: Keyword_int .

    $default  reduce using rule 95 (type_specifier)


State 7

   96 type_specifier: Keyword_long .

    $default  reduce using rule 96 (type_specifier)


State 8

   97 type_specifier: Keyword_float .

    $default  reduce using rule 97 (type_specifier)


State 9

   98 type_specifier: Keyword_double .

    $default  reduce using rule 98 (type_specifier)


State 10

   99 type_specifier: Keyword_signed .

    $default  reduce using rule 99 (type_specifier)


State 11

  100 type_specifier: Keyword_unsigned .

    $default  reduce using rule 100 (type_specifier)


State 12

  113 enum_specifier: Keyword_enum . Ident
  114               | Keyword_enum . Ident Punctuator_cur_open enum_list Punctuator_cur_close
  115               | Keyword_enum . Punctuator_cur_open enum_list Punctuator_cur_close

    Identifier           shift, and go to state 1
    Punctuator_cur_open  shift, and go to state 31

    Ident  go to state 32


State 13

  103 struct_specifier: Keyword_struct . Ident Punctuator_cur_open struct_declaration_list Punctuator_cur_close
  104                 | Keyword_struct . Punctuator_cur_open struct_declaration_list Punctuator_cur_close
  105                 | Keyword_struct . Ident

    Identifier           shift, and go to state 1
    Punctuator_cur_open  shift, and go to state 33

    Ident  go to state 34


State 14

   87 storage_class_specifier: Keyword_typedef .

    $default  reduce using rule 87 (storage_class_specifier)


State 15

  124 direct_declarator: Punctuator_par_open . declarator Punctuator_par_close

    Identifier           shift, and go to state 1
    Operator_mul         shift, and go to state 2
    Punctuator_par_open  shift, and go to state 15

    Ident              go to state 16
    declarator         go to state 35
    direct_declarator  go to state 24
    pointer            go to state 25


State 16

  123 direct_declarator: Ident .

    $default  reduce using rule 123 (direct_declarator)


State 17

  188 external_declaration: declaration .

    $default  reduce using rule 188 (external_declaration)


State 18

   81 declaration: declaration_specifiers . init_declarator_list Punctuator_eol
   82            | declaration_specifiers . Punctuator_eol
  190 function_definition: declaration_specifiers . declarator compound_statement

    Identifier           shift, and go to state 1
    Operator_mul         shift, and go to state 2
    Punctuator_eol       shift, and go to state 36
    Punctuator_par_open  shift, and go to state 15

    Ident                 go to state 16
    init_declarator_list  go to state 37
    init_declarator       go to state 38
    declarator            go to state 39
    direct_declarator     go to state 24
    pointer               go to state 25


State 19

   83 declaration_specifiers: storage_class_specifier .
   84                       | storage_class_specifier . declaration_specifiers

    Keyword_void      shift, and go to state 3
    Keyword_char      shift, and go to state 4
    Keyword_short     shift, and go to state 5
    Keyword_int       shift, and go to state 6
    Keyword_long      shift, and go to state 7
    Keyword_float     shift, and go to state 8
    Keyword_double    shift, and go to state 9
    Keyword_signed    shift, and go to state 10
    Keyword_unsigned  shift, and go to state 11
    Keyword_enum      shift, and go to state 12
    Keyword_struct    shift, and go to state 13
    Keyword_typedef   shift, and go to state 14

    $default  reduce using rule 83 (declaration_specifiers)

    declaration_specifiers   go to state 40
    storage_class_specifier  go to state 19
    type_specifier           go to state 20
    struct_specifier         go to state 21
    enum_specifier           go to state 22


State 20

   85 declaration_specifiers: type_specifier .
   86                       | type_specifier . declaration_specifiers

    Keyword_void      shift, and go to state 3
    Keyword_char      shift, and go to state 4
    Keyword_short     shift, and go to state 5
    Keyword_int       shift, and go to state 6
    Keyword_long      shift, and go to state 7
    Keyword_float     shift, and go to state 8
    Keyword_double    shift, and go to state 9
    Keyword_signed    shift, and go to state 10
    Keyword_unsigned  shift, and go to state 11
    Keyword_enum      shift, and go to state 12
    Keyword_struct    shift, and go to state 13
    Keyword_typedef   shift, and go to state 14

    $default  reduce using rule 85 (declaration_specifiers)

    declaration_specifiers   go to state 41
    storage_class_specifier  go to state 19
    type_specifier           go to state 20
    struct_specifier         go to state 21
    enum_specifier           go to state 22


State 21

  102 type_specifier: struct_specifier .

    $default  reduce using rule 102 (type_specifier)


State 22

  101 type_specifier: enum_specifier .

    $default  reduce using rule 101 (type_specifier)


State 23

  189 function_definition: declarator . compound_statement

    Punctuator_cur_open  shift, and go to state 42

    compound_statement  go to state 43


State 24

  121 declarator: direct_declarator .
  125 direct_declarator: direct_declarator . Punctuator_squ_open Punctuator_squ_close
  126                  | direct_declarator . Punctuator_squ_open constant_EXPR Punctuator_squ_close
  127                  | direct_declarator . Punctuator_par_open parameter_type_list Punctuator_par_close
  128                  | direct_declarator . Punctuator_par_open Punctuator_par_close

    Punctuator_par_open  shift, and go to state 44
    Punctuator_squ_open  shift, and go to state 45

    $default  reduce using rule 121 (declarator)


State 25

  122 declarator: pointer . direct_declarator

    Identifier           shift, and go to state 1
    Punctuator_par_open  shift, and go to state 15

    Ident              go to state 16
    direct_declarator  go to state 46


State 26

  186 translation_unit: translation_unit . external_declaration
  191 ROOT: translation_unit .

    Identifier           shift, and go to state 1
    Operator_mul         shift, and go to state 2
    Keyword_void         shift, and go to state 3
    Keyword_char         shift, and go to state 4
    Keyword_short        shift, and go to state 5
    Keyword_int          shift, and go to state 6
    Keyword_long         shift, and go to state 7
    Keyword_float        shift, and go to state 8
    Keyword_double       shift, and go to state 9
    Keyword_signed       shift, and go to state 10
    Keyword_unsigned     shift, and go to state 11
    Keyword_enum         shift, and go to state 12
    Keyword_struct       shift, and go to state 13
    Keyword_typedef      shift, and go to state 14
    Punctuator_par_open  shift, and go to state 15

    $default  reduce using rule 191 (ROOT)

    Ident                    go to state 16
    declaration              go to state 17
    declaration_specifiers   go to state 18
    storage_class_specifier  go to state 19
    type_specifier           go to state 20
    struct_specifier         go to state 21
    enum_specifier           go to state 22
    declarator               go to state 23
    direct_declarator        go to state 24
    pointer                  go to state 25
    external_declaration     go to state 47
    function_definition      go to state 28


State 27

  185 translation_unit: external_declaration .

    $default  reduce using rule 185 (translation_unit)


State 28

  187 external_declaration: function_definition .

    $default  reduce using rule 187 (external_declaration)


State 29

    0 $accept: ROOT . $end

    $end  shift, and go to state 48


State 30

  130 pointer: Operator_mul pointer .

    $default  reduce using rule 130 (pointer)


State 31

  115 enum_specifier: Keyword_enum Punctuator_cur_open . enum_list Punctuator_cur_close

    Identifier  shift, and go to state 1

    Ident       go to state 49
    enum_list   go to state 50
    enumerator  go to state 51
    ENUM_CONST  go to state 52


State 32

  113 enum_specifier: Keyword_enum Ident .
  114               | Keyword_enum Ident . Punctuator_cur_open enum_list Punctuator_cur_close

    Punctuator_cur_open  shift, and go to state 53

    $default  reduce using rule 113 (enum_specifier)


State 33

  104 struct_specifier: Keyword_struct Punctuator_cur_open . struct_declaration_list Punctuator_cur_close

    Keyword_void      shift, and go to state 3
    Keyword_char      shift, and go to state 4
    Keyword_short     shift, and go to state 5
    Keyword_int       shift, and go to state 6
    Keyword_long      shift, and go to state 7
    Keyword_float     shift, and go to state 8
    Keyword_double    shift, and go to state 9
    Keyword_signed    shift, and go to state 10
    Keyword_unsigned  shift, and go to state 11
    Keyword_enum      shift, and go to state 12
    Keyword_struct    shift, and go to state 13

    type_specifier           go to state 54
    struct_specifier         go to state 21
    struct_declaration_list  go to state 55
    struct_declaration       go to state 56
    specifier_list           go to state 57
    enum_specifier           go to state 22


State 34

  103 struct_specifier: Keyword_struct Ident . Punctuator_cur_open struct_declaration_list Punctuator_cur_close
  105                 | Keyword_struct Ident .

    Punctuator_cur_open  shift, and go to state 58

    $default  reduce using rule 105 (struct_specifier)


State 35

  124 direct_declarator: Punctuator_par_open declarator . Punctuator_par_close

    Punctuator_par_close  shift, and go to state 59


State 36

   82 declaration: declaration_specifiers Punctuator_eol .

    $default  reduce using rule 82 (declaration)


State 37

   81 declaration: declaration_specifiers init_declarator_list . Punctuator_eol
   89 init_declarator_list: init_declarator_list . Operator_comma init_declarator

    Operator_comma  shift, and go to state 60
    Punctuator_eol  shift, and go to state 61


State 38

   88 init_declarator_list: init_declarator .

    $default  reduce using rule 88 (init_declarator_list)


State 39

   90 init_declarator: declarator .
   91                | declarator . Operator_assign initializer
  190 function_definition: declaration_specifiers declarator . compound_statement

    Operator_assign      shift, and go to state 62
    Punctuator_cur_open  shift, and go to state 42

    $default  reduce using rule 90 (init_declarator)

    compound_statement  go to state 63


State 40

   84 declaration_specifiers: storage_class_specifier declaration_specifiers .

    $default  reduce using rule 84 (declaration_specifiers)


State 41

   86 declaration_specifiers: type_specifier declaration_specifiers .

    $default  reduce using rule 86 (declaration_specifiers)


State 42

  164 compound_statement: Punctuator_cur_open . declaration_list statement_list Punctuator_cur_close
  165                   | Punctuator_cur_open . declaration_list Punctuator_cur_close
  166                   | Punctuator_cur_open . statement_list Punctuator_cur_close
  167                   | Punctuator_cur_open . Punctuator_cur_close

    Constant_int          shift, and go to state 64
    Constant_char         shift, and go to state 65
    Constant_double       shift, and go to state 66
    Constant_float        shift, and go to state 67
    Constant_long_double  shift, and go to state 68
    String                shift, and go to state 69
    Identifier            shift, and go to state 1
    Operator_add          shift, and go to state 70
    Operator_sub          shift, and go to state 71
    Operator_addadd       shift, and go to state 72
    Operator_subsub       shift, and go to state 73
    Operator_mul          shift, and go to state 74
    Operator_not          shift, and go to state 75
    Operator_bit_and      shift, and go to state 76
    Operator_bit_not      shift, and go to state 77
    Operator_sizeof       shift, and go to state 78
    Keyword_void          shift, and go to state 3
    Keyword_char          shift, and go to state 4
    Keyword_short         shift, and go to state 5
    Keyword_int           shift, and go to state 6
    Keyword_long          shift, and go to state 7
    Keyword_float         shift, and go to state 8
    Keyword_double        shift, and go to state 9
    Keyword_signed        shift, and go to state 10
    Keyword_unsigned      shift, and go to state 11
    Keyword_case          shift, and go to state 79
    Keyword_default       shift, and go to state 80
    Keyword_if            shift, and go to state 81
    Keyword_switch        shift, and go to state 82
    Keyword_while         shift, and go to state 83
    Keyword_do            shift, and go to state 84
    Keyword_for           shift, and go to state 85
    Keyword_continue      shift, and go to state 86
    Keyword_break         shift, and go to state 87
    Keyword_return        shift, and go to state 88
    Keyword_enum          shift, and go to state 12
    Keyword_struct        shift, and go to state 13
    Keyword_typedef       shift, and go to state 14
    Punctuator_eol        shift, and go to state 89
    Punctuator_par_open   shift, and go to state 90
    Punctuator_cur_open   shift, and go to state 42
    Punctuator_cur_close  shift, and go to state 91

    primary_EXPR             go to state 92
    Ident                    go to state 93
    Constant                 go to state 94
    postfix_EXPR             go to state 95
    unary_EXPR               go to state 96
    unary_operator           go to state 97
    cast_EXPR                go to state 98
    multiplicative_EXPR      go to state 99
    additive_EXPR            go to state 100
    shift_EXPR               go to state 101
    relational_EXPR          go to state 102
    equality_EXPR            go to state 103
    BIT_AND_EXPR             go to state 104
    BIT_XBIT_OR_EXPR         go to state 105
    BIT_OR_EXPR              go to state 106
    LOGIC_AND_EXPR           go to state 107
    LOGIC_OR_EXPR            go to state 108
    conditional_EXPR         go to state 109
    assignment_EXPR          go to state 110
    EXPR                     go to state 111
    declaration              go to state 112
    declaration_specifiers   go to state 113
    storage_class_specifier  go to state 19
    type_specifier           go to state 20
    struct_specifier         go to state 21
    enum_specifier           go to state 22
    statement                go to state 114
    labeled_statement        go to state 115
    compound_statement       go to state 116
    declaration_list         go to state 117
    statement_list           go to state 118
    EXPR_statement           go to state 119
    selection_statement      go to state 120
    iteration_statement      go to state 121
    jump_statement           go to state 122


State 43

  189 function_definition: declarator compound_statement .

    $default  reduce using rule 189 (function_definition)


State 44

  127 direct_declarator: direct_declarator Punctuator_par_open . parameter_type_list Punctuator_par_close
  128                  | direct_declarator Punctuator_par_open . Punctuator_par_close

    Keyword_void          shift, and go to state 3
    Keyword_char          shift, and go to state 4
    Keyword_short         shift, and go to state 5
    Keyword_int           shift, and go to state 6
    Keyword_long          shift, and go to state 7
    Keyword_float         shift, and go to state 8
    Keyword_double        shift, and go to state 9
    Keyword_signed        shift, and go to state 10
    Keyword_unsigned      shift, and go to state 11
    Keyword_enum          shift, and go to state 12
    Keyword_struct        shift, and go to state 13
    Keyword_typedef       shift, and go to state 14
    Punctuator_par_close  shift, and go to state 123

    declaration_specifiers   go to state 124
    storage_class_specifier  go to state 19
    type_specifier           go to state 20
    struct_specifier         go to state 21
    enum_specifier           go to state 22
    parameter_type_list      go to state 125
    parameter_list           go to state 126
    parameter_declaration    go to state 127


State 45

  125 direct_declarator: direct_declarator Punctuator_squ_open . Punctuator_squ_close
  126                  | direct_declarator Punctuator_squ_open . constant_EXPR Punctuator_squ_close

    Constant_int          shift, and go to state 64
    Constant_char         shift, and go to state 65
    Constant_double       shift, and go to state 66
    Constant_float        shift, and go to state 67
    Constant_long_double  shift, and go to state 68
    String                shift, and go to state 69
    Identifier            shift, and go to state 1
    Operator_add          shift, and go to state 70
    Operator_sub          shift, and go to state 71
    Operator_addadd       shift, and go to state 72
    Operator_subsub       shift, and go to state 73
    Operator_mul          shift, and go to state 74
    Operator_not          shift, and go to state 75
    Operator_bit_and      shift, and go to state 76
    Operator_bit_not      shift, and go to state 77
    Operator_sizeof       shift, and go to state 78
    Punctuator_par_open   shift, and go to state 90
    Punctuator_squ_close  shift, and go to state 128
